gobmkida/c3/add_to_test_array
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/add_to_test_array/src/patterns/dfa.c:1209:6: error: use of undeclared identifier 'gtest'
v7 = gtest.hash[v6]; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/add_to_test_array/src/patterns/dfa.c:1213:6: error: use of undeclared identifier 'gtest'
v9 = gtest.hash[v6]; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/add_to_test_array/src/patterns/dfa.c:1238:1: error: use of undeclared identifier 'gtest'
gtest.hash[v6] = v10; 
^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/add_to_test_array/src/obj/3/dfa.o] Error 1
